# mplr

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: mplConfig.cmake
examples/: CMakeLists.txt  arrays.cc  blocking.cc  blocking_vector.cc  collective.cc  communicator.cc  custom_initialization.cc  distributed_grid.cc  distributed_grid_scatter_gather.cc  file.cc  gather.cc  gatherv.cc  heat_equation_Jacobi_method.cc  heat_equation_successive_over-relaxation.cc  hello_world.cc  intercommunicator.cc  iterators.cc  layouts.cc  matrix_gather.cc  nonblocking.cc  nonblocking_mult.cc  parallel_sort_mpi.c  parallel_sort_mpl.cc  probe.cc  process_creation.cc  process_creation_client.cc  process_creation_multiple.cc  reduce_lcm.cc  reduce_min_loc.cc  standard_types.cc  stl_container.cc  struct.cc  subarray.cc  vibrating_string_mpi.c  vibrating_string_mpl.cc
mpl/: cartesian_communicator.hpp  comm_group.hpp  datatype.hpp  distributed_graph_communicator.hpp  environment.hpp  graph_communicator.hpp  operator.hpp  request.hpp  tag.hpp  topology_communicator.hpp  utility.hpp
mplr/: cartesian_communicator.hpp  comm_group.hpp  command_line.hpp  datatype.hpp  displacements.hpp  distributed_graph_communicator.hpp  distributed_grid.hpp  environment.hpp  error.hpp  file.hpp  flat_memory.hpp  graph_communicator.hpp  layout.hpp  message.hpp  mplr.hpp  operator.hpp  ranks.hpp  request.hpp  status.hpp  tag.hpp  topology_communicator.hpp  utility.hpp  vector.hpp
test/: CMakeLists.txt  test_cartesian_communicator.cc  test_communicator.cc  test_communicator_allgather.cc  test_communicator_allgatherv.cc  test_communicator_allreduce.cc  test_communicator_alltoall.cc  test_communicator_alltoallv.cc  test_communicator_barrier.cc  test_communicator_bcast.cc  test_communicator_exscan.cc  test_communicator_gather.cc  test_communicator_gatherv.cc  test_file.cc  (+21 more)
(+30 files in other folders)
